--- a/surgas/src/languages/strings.es.json
+++ b/surgas/src/languages/strings.es.json
@@ -15,5 +15,11 @@
     "mail": "surgasdeantioquia@gmail.com",
     "copyright": "© 2023 Surgas de Antioquia. todos los derechos reservados.",
     "poweredBy": "desarrollado por suruworks.",
-    "fechaDeCaducidad": 1231234335634
+    "locationInfo": "Información de ubicación",
+    "call": "Llamanos",
+    "whatsapp": "Whatsapp",
+    "email": "Escribenos",
+    "map": "Mapa",
+    "caq": "Preguntas frecuentes",
+    "companyBrand": "surgas de antioquia"
 }
