- barra de busqueda de productos.

--- a/surgas/src/languages/strings.en.json
+++ b/surgas/src/languages/strings.en.json
@@ -21,5 +21,6 @@
     "email": "Email",
     "map": "Map",
     "caq": "Commonly Asked Questions",
-    "companyBrand": "surgas de antioquia"
+    "companyBrand": "surgas de antioquia",
+    "search": "Search"
 }
