--- a/surgas/src/languages/strings.es.json
+++ b/surgas/src/languages/strings.es.json
@@ -21,5 +21,6 @@
     "email": "Escribenos",
     "map": "Mapa",
     "caq": "Preguntas frecuentes",
-    "companyBrand": "surgas de antioquia"
+    "companyBrand": "surgas de antioquia",
+    "search": "Buscar"
 }
